# hydromt_fiat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Hazard_3.ipynb  HydroMT Sprint session.docx  MANIFEST.in  PHILOSOPHY.md  README.md  README.rst  fiat.py  hydromt-fiat-sbom.json  pixi.toml  pyproject.toml  sonar-project.properties  stable  switcher.json  test.ini  version.sh  versions.json  vulnerability_test_file_output.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bugs.yaml  config.yml  documentation.yaml  documentation_improvement.yaml  feature_request.yaml
.github/workflows/: cache.yml  ci_docs.yml  ci_lint.yml  ci_lock.yml  ci_pages.yml  ci_sonar.yml  ci_test.yml  docs.yml  linting.yml  lock.yml  publish-to-pypi.yml  purge.yml  pypi.yml  test.yml  test_single.yml  test_wheel.yml  tests.yml  wheel.yml
binder/: environment.yml  postBuild
data/growth_scenarios/: global_gdp(ppp).xlsx
dev/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
dev/_examples/: README.html  add_roadnetwork.html  aggregation_zones_example.html  build_api.html  build_cli.html  update_exposure_data.html
dev/_generated/: hydromt_fiat.FIATModel.clear.html  hydromt_fiat.FIATModel.clip.html  hydromt_fiat.FIATModel.config.html  hydromt_fiat.FIATModel.exposure_geoms.html  hydromt_fiat.FIATModel.exposure_grid.html  hydromt_fiat.FIATModel.hazard.html  hydromt_fiat.FIATModel.html  hydromt_fiat.FIATModel.output_geoms.html  hydromt_fiat.FIATModel.output_grid.html  hydromt_fiat.FIATModel.read.html  hydromt_fiat.FIATModel.read_output.html  hydromt_fiat.FIATModel.region.html  hydromt_fiat.FIATModel.reproject.html  hydromt_fiat.FIATModel.setup_config.html  hydromt_fiat.FIATModel.setup_region.html  hydromt_fiat.FIATModel.vulnerability.html  hydromt_fiat.FIATModel.write.html  hydromt_fiat.components.ConfigComponent.clear.html  hydromt_fiat.components.ConfigComponent.data.html  hydromt_fiat.components.ConfigComponent.html  hydromt_fiat.components.ConfigComponent.read.html  hydromt_fiat.components.ConfigComponent.write.html  hydromt_fiat.components.ExposureGeomsComponent.clear.html  hydromt_fiat.components.ExposureGeomsComponent.clip.html  hydromt_fiat.components.ExposureGeomsComponent.data.html  (+114 more)
dev/_modules/: index.html
docs/: Makefile  api.rst  changelog.rst  conf.py  index.md  index.rst  installation.rst  intro.rst  make.bat
envs/: hydromt-fiat-dev.yml  hydromt-fiat-docs.yml  hydromt-fiat.yml
examples/: README.rst  add_roadnetwork.ipynb  aggregation_zones_example.ipynb  build.ipynb  build.yml  build_api.ipynb  build_cli.ipynb  build_fiat.ini  data_catalog.yml  explore_data.ipynb  fiat_flood.ini  global_OSM_JRC.ipynb  global_OSM_local_damages.ipynb  local_Damages_and_damage_curves_Brasil.ipynb  prepare_data_catalog.ipynb  rio_de_janeiro_case_study.ipynb  update_exposure_data.ipynb  update_model.ipynb
hydromt_fiat/: __init__.py  config.py  config_io.py  constants.py  exposure.toml  fiat.py  hazard_functions.py  loader.py  read.py  reader.py  spatial_joins.py  test.py  uitls  util.py  validation.py  validationhazard.py  version.py  vulnerability_test_file_output.csv  write.py  writer.py
tests/: conftest.py  fetch_data.py  test_SVI.py  test_SVI_exposure.py  test_aggregation_areas.py  test_building_footprint  test_building_footprints.py  test_component.py  test_create_step_function.py  test_equity_data.py  test_exposure.py  test_exposure_api.py  test_ground_elevation.py  test_hazard.py  test_integration.py  test_integrations_hazard.py  test_model.py  test_model_class.py  test_osm_driver.py  test_raise_ground_floor_height.py  test_read_write.py  test_reader.py  test_region.py  test_roads.py  test_setup_exposure_buildings.py  test_setup_exposure_buildings_with_dem_data.py  test_setup_ground_floor_height.py  test_setup_new_composite_area_divided_aggregation.py  test_setup_new_composite_areas.py  test_setup_new_composite_areas_ground_elevation.py  test_truncate_damage_function.py  test_update_ground_floor_height.py  test_update_max_potential_damage.py  test_update_max_potential_damage_user_data.py  test_utils.py  test_vulnerability.py  test_vulnerability_exposure.py  test_vulnerability_exposure_add_to_data_catalog.py  test_vulnerability_exposure_global_default.py  test_vulnerability_expousure_with_user_dem_data.py  (+2 more)
v0.1.0/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
v0.1.1/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html
v0.1.2/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html
v0.1.9/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
v0.2.0/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html
v0.3.0/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.1/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.2/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.3/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.4/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.5/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.6/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v0.5.7/: changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
v1.0.0/: api.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+1189 files in other folders)
