[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["hydromt_fiat*"]

[tool.setuptools.package-data]
"hydromt_fiat" = ["data/**"]

[tool.setuptools.dynamic]
version = { attr = "hydromt_fiat.version.__version__" }

[project]
name = "hydromt_fiat"
dynamic = ["version"]
# TODO description = "Hydrological model for flood impact assessment and adaptation planning"
authors = [
    {name = "Dirk Eilander", email = "dirk.eilander@deltares.nl"},
	{name = "Frederique de Groen", email = "frederique.degroen@deltares.nl"},
	{name = "Mario Fuentes Monjaraz", email = "mario.fuentesmonjaraz@deltares.nl"},
	{name = "Luis Rodriguez Galvez", email = "luis.rodriguez@deltares.nl"},
	{name = "Lieke Meijer", email = "lieke.meijer@deltares.nl"},
    {name = "Sarah Rautenbach", email = "sarah.rautenbach@deltares.nl"},
]

requires-python = ">=3.10"
dependencies = [
    "census",
    "dask",
    "hydromt>=0.9.4, <1.0",
    "geopandas",
    "geopy",
    "numpy",
    "openpyxl",
    "osmnx>=1,<2",
    "pandas",
    "pycountry-convert",
    "pydantic",    
    "pyogrio",
    "tomli",
    "tomli-w",
    "tqdm",
    "us",
    "xarray",
    "xarray-spatial"
]

readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
	"ruff==0.6.8",
]
docs = [
    "jupyter",
    "matplotlib",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx_autosummary_accessors",
    "sphinx_design",
    
]
test = [
    "responses",
    "pytest>=2.7.3",
    "pytest-cov",
]

[project.urls]
Documentation = "https://deltares.github.io/hydromt_fiat/"
Source = "https://github.com/Deltares/hydromt_fiat"

[project.entry-points."hydromt.models"]
fiat = "hydromt_fiat.fiat:FiatModel"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.tasks]
lint = { cmd = ["pre-commit", "run", "--all"] }

doctest = { cmd = ["sphinx-build", "-M", "doctest", "docs",	"docs/_build", "-W"] }
docs-build = { cmd = ["sphinx-build", "-M", "html", "docs",	"docs/_build", "-W"] }
docs = { depends-on = ["docs-build"] }
serve = { cmd = ["python", "-m", "http.server", "-d", "docs/_build/html"] }

test = { cmd = ["pytest"] }
test-lf = { cmd = ["pytest", "--lf", "--tb=short"] }
test-err-warn = { cmd = ["pytest", "--tb=short", "-W", "error"] }
test-cov = { cmd = [ "pytest", "--verbose",	"--cov=hydromt_fiat", "--cov-report", "xml"] }

[tool.pixi.dependencies]
hydromt = ">=0.9.4, <0.11"
pip = "*"

[tool.pixi.pypi-dependencies]
hydromt_fiat = { path = ".", editable = true }

[tool.pixi.feature.docs.dependencies]
pandoc = "*"

[tool.pixi.environments]
default = {features = ["dev", "docs", "test"]}
dev = {features = ["dev", "test"]}
docs = {features = ["docs"]}

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["docs"]

[tool.ruff.lint]
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), bugbear (B)
select = ["E", "F", "I", "PT", "D", "B", "ICN", "TID"]
ignore = ["D211", "D213", "D206", "E501", "E741", "D105", "E712", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
"hydromt/__init__.py" = ["E402", "F401", "F403"]
"hydromt/models/__init__.py" = ["F401"]
"hydromt/_compat.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
