## Build system related stuff
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hydromt_fiat*"]

[tool.setuptools.dynamic]
version = {attr = "hydromt_fiat.version.__version__"}

## Project related stuff
[project]
name = "hydromt_fiat"
dynamic = ['version']

authors = [
    {name = "B.W. Dalmijn", email = "brendan.dalmijn@deltares.nl"},
    {name = "T.C. de Jong", email = "tjalling.dejong@deltares.nl"},
    {name = "L. Blom", email = "luuk.blom@deltares.nl"}
]
maintainers = [
    {name = "T.C. de Jong", email = "tjalling.dejong@deltares.nl"},
    {name = "L. Blom", email = "luuk.blom@deltares.nl"}
]

description = "HydroMT plugin for Delft-FIAT."
readme = "README.md"
license = {text = "GPL-3.0"}

requires-python = ">=3.11"
dependencies = [
"barril",
"dask",
"geopandas",
"hydromt>=1.0.0",
"numpy",
"osmnx>=1,<2",
"pooch",
"requests",
"tomli",
"tomli-w",
"xarray",
]

keywords = ["HydroMT", "FIAT", "Damage"]
classifiers = [
# How mature is this project? Common values are
#   3 - Alpha
#   4 - Beta
#   5 - Production/Stable
'Development Status :: 4 - Beta',

# Indicate who your project is intended for
'Intended Audience :: End Users/Desktop',
'Intended Audience :: Developers',
'Intended Audience :: Science/Research',

# Topic of the package
'Topic :: Scientific/Engineering :: Hydrology',
'Topic :: Scientific/Engineering :: GIS',

# Pick your license as you wish (should match "license" above)
'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',

# Language
'Natural Language :: English',

# OS
'Operating System :: OS Independent',

# Specify the Python versions you support here. In particular, ensure
# that you indicate whether you support Python 2, Python 3 or both.
'Programming Language :: Python :: 3',
'Programming Language :: Python :: 3.11',
'Programming Language :: Python :: 3.12',
'Programming Language :: Python :: 3.13',
]

[project.optional-dependencies] # Optional
dev = [
    "pre-commit",
    "ruff",
    "hydromt_fiat[all, docs, examples, test]"
]
docs = [
    "nbsphinx",
	"pydata-sphinx-theme",
    "sphinx",
    "sphinx_design",
    "sphinx_autosummary_accessors",
    "hydromt_fiat[all, examples]",
]
examples = [
    "cartopy",
    "jupyterlab",
    "nbconvert==7.13.1",
    "notebook",
    "pandoc",
    "hydromt_fiat[all]",
]
test = [
    "pytest>=2.7.3",
    "pytest-cov",
    "pytest-mock",
    "responses",
    "hydromt_fiat[all]",
]

[project.entry-points."hydromt.models"]
fiat = "hydromt_fiat.fiat"

[project.urls]
"Homepage" = "https://github.com/Deltares/hydromt_fiat"
"Bug Reports" = "https://github.com/Deltares/hydromt_fiat/issues"
"Source" =  "https://github.com/Deltares/hydromt_fiat"

[tool.make_env]
channels = ["conda-forge"]
deps_not_in_conda = [
    "sphinx_autosummary_accessors",
    "sphinx_design",
]

## Some stuff for pytest and coverage
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["./src"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = ".cov"

[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
[tool.ruff.lint]
select = ["E", "F", "I", "PT", "D"]
ignore = ["B904", "D105", "D211", "D213", "D301", "E712", "E741"]
exclude = ["docs/**"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103", "D100", "D104"]
"tests/conftest.py" = ["E402"]
"src/hydromt_fiat/__init__.py" = ["E402", "F401", "F403"]
"src/hydromt_fiat/workflows/__init__.py" = ["F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

## Project related stuff
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

## The different tasks of this project
[tool.pixi.tasks]
# Installation
install = { depends-on = ["install-pre-commit"] }
install-pre-commit = "pre-commit install"

# Repo related tasks
lint = { cmd = ["pre-commit", "run", "--all"] }

# Docker related stuff (expand in future)
docker-clean = { cmd = ["docker", "system", "prune", "-f"] }

# Documentation generation
docs-dummy = {cmd = ["sphinx-build", "./docs", "./docs/_build", "-b", "dummy", "-W"] }
docs-html = { cmd = ["sphinx-build", "-M", "html", "docs", "docs/_build", "-W"] }
serve = { cmd = ["python", "-m", "http.server", "8000", "-d", "docs/_build/html"] }

# Testing
test = { cmd = ["pytest"] }
test-lf = { cmd = ["pytest", "--lf", "--tb=short"] }
test-cov = { cmd = ["pytest", "--verbose", "--cov=hydromt_fiat", "--cov-report", "xml"] }
test-cov-local = { cmd = ["pytest", "--verbose", "--cov", "--cov-report", "html",] }

# Clean up (some of) the temporary files
clean = { depends-on = [
  "clean-env-files",
  "clean-bin",
  "clean-dist",
  "clean-docs",
  "clean-docs-example",
  "clean-docs-gen",
] }
clean-env-files = { cmd = ["rm", "-f", "environment.yml"] }
clean-bin = { cmd = ["rm", "-rf", "bin"] }
clean-dist = {cmd = ["rm", "-rf", "dist"] }
clean-docs = { cmd = ["rm", "-rf", "docs/_build"] }
clean-docs-example = { cmd = ["rm", "-rf", "docs/_examples"] }
clean-docs-gen = { cmd = ["rm", "-rf", "docs/_generated"] }

## Dependencies
[tool.pixi.dependencies]
hydromt = ">=1.0.0"
pip = "*"

[tool.pixi.pypi-dependencies]
hydromt_fiat = { path = ".", editable = true }

[tool.pixi.feature.examples.dependencies]
pandoc = "*"

[tool.pixi.feature.test.dependencies]
delft_fiat = ">=0.2.1"

## Define the environments
[tool.pixi.environments]
default = { features = [] }
dev = { features = ["dev", "docs", "examples", "test"] }
docs = { features = ["docs", "examples"] }
test = {features = ["test"] }
