## Build system related stuff
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hydromt_fiat*"]

[tool.setuptools.package-data]
hydromt_fiat = ["data/*"]

[tool.setuptools.dynamic]
version = {attr = "hydromt_fiat.version.__version__"}

## Project related stuff
[project]
name = "hydromt_fiat"
dynamic = ['version']

authors = [
    {name = "B.W. Dalmijn", email = "brendan.dalmijn@deltares.nl"},
    {name = "T.C. de Jong", email = "tjalling.dejong@deltares.nl"},
    {name = "L. Blom", email = "luuk.blom@deltares.nl"}
]
maintainers = [
    {name = "B.W. Dalmijn", email = "brendan.dalmijn@deltares.nl"},
    {name = "T.C. de Jong", email = "tjalling.dejong@deltares.nl"},
    {name = "L. Blom", email = "luuk.blom@deltares.nl"}
]

description = "HydroMT plugin for Delft-FIAT."
license = "GPL-3.0-or-later"
readme = "README.rst"

requires-python = ">=3.11"
dependencies = [
    "barril",
    "geopandas",
    "hydromt>=1.3.0",
    "numpy",
    "osmnx",
    "pooch",
    "pyproj",
    "requests",
    "shapely",
    "tomlkit",
    "xarray",
]

keywords = ["HydroMT", "FIAT", "Impact"]
classifiers = [
# How mature is this project? Common values are
#   3 - Alpha
#   4 - Beta
#   5 - Production/Stable
'Development Status :: 4 - Beta',

# Indicate who your project is intended for
'Intended Audience :: End Users/Desktop',
'Intended Audience :: Developers',
'Intended Audience :: Science/Research',

# Topic of the package
'Topic :: Scientific/Engineering :: Hydrology',
'Topic :: Scientific/Engineering :: GIS',

# Language
'Natural Language :: English',

# OS
'Operating System :: OS Independent',

# Specify the Python versions you support here. In particular, ensure
# that you indicate whether you support Python 2, Python 3 or both.
'Programming Language :: Python :: 3',
'Programming Language :: Python :: 3.11',
'Programming Language :: Python :: 3.12',
'Programming Language :: Python :: 3.13',
]

[project.optional-dependencies] # Optional
dev = [
    "build",
    "mypy",
    "pre-commit",
    "python-magic",
    "ruff",
    "sbom4python",
]
docs = [
    "nbsphinx",
	"pydata-sphinx-theme",
    "sphinx>=8.2.0",
    "sphinx_design",
    "sphinx_autosummary_accessors",
]
examples = [
    "cartopy",
    "jupyterlab",
    "nbconvert==7.13.1",
    "notebook",
    "pandoc",
]
test = [
    "pytest>=2.7.3",
    "pytest-cov",
    "pytest-mock",
    "responses",
]
all = ["hydromt_fiat[dev,docs,examples,test]"]

[project.entry-points."hydromt.models"]
fiat = "hydromt_fiat.fiat"

[project.entry-points."hydromt.drivers"]
fiat = "hydromt_fiat.drivers"

[project.entry-points."hydromt.uri_resolvers"]
fiat = "hydromt_fiat.drivers.resolvers"

[project.urls]
"Homepage" = "https://deltares.github.io/hydromt_fiat/latest"
"Source" =  "https://github.com/Deltares/hydromt_fiat"
"Bug Reports" = "https://github.com/Deltares/hydromt_fiat/issues"

## Some stuff for pytest and coverage
[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "serial",
    "system: marks tests as system tests (deselect with '-m \"not system\"')",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["./src"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    ]
ignore_errors = true

[tool.coverage.html]
directory = ".cov"

## Linting and formatting
[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
[tool.ruff.lint]
select = ["E", "F", "I", "PT", "D"]
ignore = ["B904", "D105", "D211", "D213", "D301", "E712", "E741"]
exclude = ["docs/**"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103", "D100", "D104"]
"src/hydromt_fiat/__init__.py" = ["F401", "F403"]
"src/hydromt_fiat/**/__init__.py" = ["F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

## In depth code checking
[tool.mypy]
# TODO: Re-enable the tests
exclude = ["tests/.*", "tmp/.*"]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = true

## Workspace related stuff
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

## The different tasks of this workspace
# First general tasks
[tool.pixi.tasks]
# Clean up (some of) the temporary files
clean = { depends-on = [
    "clean-bin",
    "clean-build",
    "clean-dist",
    "clean-docs",
] }
clean-bin = { cmd = ["rm", "-rf", "bin"] }
clean-build = { cmd = ["rm", "-rf", "build"] }
clean-dist = {cmd = ["rm", "-rf", "dist"] }
clean-docs = { depends-on = [
    "clean-docs-build",
    "clean-docs-example",
    "clean-docs-gen",
] }
clean-docs-build = { cmd = ["rm", "-rf", "docs/_build"] }
clean-docs-example = { cmd = ["rm", "-rf", "docs/_examples"] }
clean-docs-gen = { cmd = ["rm", "-rf", "docs/_generated"] }

# Docker related stuff (expand in future)
docker-clean = { cmd = ["docker", "system", "prune", "-f"] }

# Dev specific taskss
[tool.pixi.feature.dev.tasks]
# Installation
install-pre-commit = "pre-commit install"
install = { depends-on = ["install-pre-commit"] }

# Linting and code checking
lint = { cmd = ["pre-commit", "run", "--all"] }
mypy = { cmd = ["mypy", ".", "--install-types", "--non-interactive"] }

# SBOM
sbom = { cmd = [
    "sbom4python",
    "--module",
    "hydromt_fiat",
    "--output-file",
    "hydromt-fiat-sbom.json",
    "--sbom",
    "spdx",
    "--format",
    "json",
] }

# Building of documentation
[tool.pixi.feature.docs.tasks]
docs-dummy = {cmd = ["sphinx-build", "./docs", "./docs/_build", "-b", "dummy", "-W"] }
docs-html = { cmd = ["sphinx-build", "-M", "html", "docs", "docs/_build", "-W"] }
docs-html-rebuild = { depends-on = ["clean-docs", "docs-html"] }
serve = { cmd = ["python", "-m", "http.server", "8000", "-d", "docs/_build/html"] }

# Testing tasks
[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest", "--verbose"] }
test-lf = { cmd = ["pytest", "--lf", "--tb=short"] }
test-cov = { cmd = [
    "pytest",
    "-m",
    "not (integration or system)",
    "--verbose",
    "--cov=hydromt_fiat",
    "--cov-report",
    "xml"
] }
test-cov-html = { cmd = [
    "pytest",
    "-m",
    "not (integration or system)",
    "--verbose",
    "--cov",
    "--cov-report",
    "html"
] }
test-integration = { cmd = [
    "pytest",
    "-m",
    "integration",
    "--verbose",
] }
test-system = { cmd = [
    "pytest",
    "-m",
    "system",
    "--verbose",
] }

## Dependencies
[tool.pixi.dependencies]
numpy = "<2.3"

[tool.pixi.feature.envs.dependencies]
pip = "*"
uv = "*"

[tool.pixi.pypi-dependencies]
hydromt_fiat = { path = ".", editable = true }

[tool.pixi.feature.examples.dependencies]
pandoc = "*"

[tool.pixi.feature.test.dependencies]
delft_fiat = ">=0.4.0"
gdal = ">=3.9.1"

# Extra python environments
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

## Define the environments
[tool.pixi.environments]
default = { features = ["py313", "envs", "dev", "docs", "examples", "test"], solve-group="py313" }
docs = { features = ["envs", "docs", "examples"], solve-group="py313" }
slim = { features = [], solve-group="py313" }
test-py313 = { features = ["py313", "envs", "test"], solve-group="py313" }
test-py312 = { features = ["py312", "envs", "test"], solve-group="py312" }
test-py311 = { features = ["py311", "envs", "test"], solve-group="py311" }
# envs below are for testing the release artifacts and therefore only contain the dependencies: python, test and envs.
# `pip install whl[all]` into these environments to test the generated whl files.
# https://pixi.prefix.dev/v0.62.1/workspace/multi_environment/#feature-environment-set-definitions
system-py313 = { features = ["py313", "test", "envs"], no-default-feature=true }
system-py312 = { features = ["py312", "test", "envs"], no-default-feature=true }
system-py311 = { features = ["py311", "test", "envs"], no-default-feature=true }
